--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,23 +3,41 @@ name: CI
 on:
   pull_request_target:
     branches:
-      - main
-
-
-env:
-  UV_VERSION: "0.6.1" # Pin uv version to avoid breaking changes
+      - master
 
 jobs:
   test:
+    name: test
     runs-on: ubuntu-latest
-      
+    strategy:
+      matrix:
+        python-version:
+          - "3.10"
+          - "3.11"
+          - "3.12"
+          - "3.13"
+
     steps:
+      - name: Get IP Addresses
+        id: ip
+        uses: candidob/get-runner-ip@v1.0.0
+
+      - name: See IP Addresses
+        run: |
+            echo ${{ steps.ip.outputs.ipv4 }}
+            echo ${{ steps.ip.outputs.ipv6 }}
+
       - uses: actions/checkout@v4
 
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
+      - name: Install uv and set the python version
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: "3.12"
+          python-version: ${{ matrix.python-version }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Install dependencies
+        run: uv sync
 
       - name: Run tests
         env:
@@ -27,3 +45,23 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: uv run --group test pytest
 
+  test-build:
+    name: test-build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - "3.13"
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install uv and set the python version
+        uses: astral-sh/setup-uv@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Test Build
+        run: uv build
