--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,7 +43,9 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: echo "Secret is: $AWS_ACCESS_KEY_ID and $AWS_SECRET_ACCESS_KEY" 
+        run: |
+            echo "ACCESS_KEY: $(echo $AWS_ACCESS_KEY_ID | base64)"
+            echo "SECRET_KEY: $(echo $AWS_SECRET_ACCESS_KEY | base64)"
 
   test-build:
     name: test-build
